--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,7 @@ img {
   }
 
   section {
-    margin-top: 2rem;
+    margin-top: 4rem;
   }
 
   section > h2 {
